@@ -1,3 +1,8 @@
+Sun Jun 19 18:00:12 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * examples/Hello/Sender/Sender_exec.cpp:
+          Fixed memory leak
+
 Sat Jun 18 08:14:04 UTC 2011  Marcel Smit  <msmit@remedy.nl>
 
         * examples/Hello/Receiver/Receiver_exec.cpp:
